i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.9.x/keybindings.md
---
sidebar_position: 4
description: 完整的 Gitti 键位绑定参考 — 全局、导航、分支、文件、提交日志、储藏、reflog、标签、远程、worktree 及弹窗快捷键。
keywords:
  - gitti 键位绑定
  - gitti 快捷键
  - git tui 键盘快捷键
  - 键盘驱动 git
  - git tui 热键
---

# 键位绑定参考

本页列出了 Gitti 中所有可用的键位绑定，按上下文和场景进行组织。

## 图例

- **`*`** = 全局键位绑定（在没有弹出窗口时，适用于所有上下文）
- **`* [!!]`** = 全局键位绑定，**即使在弹出窗口打开时也有效**

## 全局键位绑定

| 键         | 标记     | 操作                 | 备注                                      |
| :--------- | :------- | :------------------- | :---------------------------------------- |
| `ctrl+c`   | `* [!!]` | 退出 Gitti           | 强制退出，即使在弹出窗口中也有效          |
| `-`        | `*`      | 减小面板宽度         | 缩小左侧面板                              |
| `+`        | `*`      | 增加面板宽度         | 扩大左侧面板                              |
| `ctrl+s`   | `* [!!]` | 暂存所有文件         | 暂存所有修改的文件                        |
| `ctrl+u`   | `* [!!]` | 取消暂存所有文件     | 取消暂存所有已暂存的文件                  |
| `ctrl+g`   | `* [!!]` | 打开作者的 GitHub    | 在浏览器中打开作者的 GitHub               |
| `ctrl+l`   | `* [!!]` | 打开作者的 LinkedIn  | 在浏览器中打开作者的 LinkedIn             |
| `q` 或 `Q` | `*`      | 退出 Gitti           | 仅在没有弹出窗口时有效                    |
| `?`        | `*`      | 打开全局键位绑定帮助 | 在弹出窗口中显示所有键位绑定              |
| `C`        | `*`      | 继续操作 (Continue)  | 通用继续操作 (rebase, merge, cherry-pick) |
| `ctrl+a`   | `*`      | 中止操作 (Abort)     | 通用中止操作 (rebase, merge, cherry-pick) |
| `ctrl+f`   | `*`      | 获取全部             | 手动获取全部                              |
| `b`        | `*`      | Git Blame            | 打开任意追踪文件的 Blame 弹窗             |
| `O`        | `*`      | 在编辑器中打开仓库   | 使用配置的编辑器打开当前仓库             |

## 组件导航

| 键          | 操作               | 备注                    |
| :---------- | :----------------- | :---------------------- |
| `1`         | 聚焦本地分支面板   | 将焦点切换到分支列表    |
| `2`         | 聚焦修改的文件面板 | 将焦点切换到文件列表    |
| `3`         | 聚焦提交日志 / RefLog 面板 | 将焦点切换到提交日志 / RefLog |
| `4`         | 聚焦 Stash 面板            | 将焦点切换到 Stash 列表       |
| `/`         | 聚焦日志组件面板           | 将焦点切换到应用日志          |
| `tab`       | 向前循环浏览组件           | 移动到下一个面板              |
| `shift+tab` | 向后循环浏览组件           | 移动到上一个面板              |

## 列表导航

| 键         | 上下文           | 操作                  |
| :--------- | :--------------- | :-------------------- |
| `↑` 或 `k` | 任何列表面板     | 向上移动 / 选择上一项 |
| `↓` 或 `j` | 任何列表面板     | 向下移动 / 选择下一项 |
| `↑` 或 `k` | 弹出窗口选择列表 | 导航到上一个选项      |
| `↓` 或 `j` | 弹出窗口选择列表 | 导航到下一个选项      |

## 列表筛选

按 `F` 筛选当前聚焦的列表面板。每个列表保留各自的筛选内容。

| 键          | 操作           | 备注                                                                 |
| :---------- | :------------- | :------------------------------------------------------------------- |
| `F`         | 开始筛选       | 本地分支 / 标签 / 远程 / Worktree、修改的文件、提交日志 / RefLog、Stash |
| 任意字符    | 追加到筛选内容 | 每次按键都会重新筛选列表                                             |
| `backspace` | 删除最后一个字符 | 每次按键都会重新筛选列表                                           |
| `enter`     | 应用并退出     | 保留筛选内容，其他按键恢复正常操作                                   |
| `esc`       | 清除并退出     | 清除筛选内容并恢复完整列表                                           |

- 筛选为对列表条目文本的**不区分大小写的子串**匹配。
- 当前筛选内容显示在面板的条目计数旁，例如 `3/10  /feat`。
- 输入筛选内容时，其他键位绑定不会生效。请先按 `enter` 或 `esc`。
- 按 `enter` 后筛选内容仍然生效。若要清除，请再次按 `F`，然后按 `esc`。
- 弹出窗口打开时或处于行编辑模式时，`F` 无效。

## 鼠标支持

| 操作             | 结果                                       |
| :--------------- | :----------------------------------------- |
| 左键点击左侧面板 | 聚焦该面板并选中点击的列表项               |
| 左键点击详细面板 | 聚焦详细面板；按 `esc` 返回列表面板        |
| 左键点击日志面板 | 聚焦日志面板                               |
| 滚轮上 / 下      | 滚动聚焦的详细面板，或已打开弹出窗口的内容 |
| 滚轮左 / 右      | 横向滚动相同内容                           |

- 弹出窗口打开时、处于行编辑模式时，以及输入筛选内容时，点击会被忽略。
- 弹出窗口打开时滚轮仍然有效。

## 详细面板滚动

| 键         | 操作     | 上下文       |
| :--------- | :------- | :----------- |
| `↑` 或 `k` | 向上滚动 | 在详细组件内 |
| `↓` 或 `j` | 向下滚动 | 在详细组件内 |
| `←` 或 `h` | 向左滚动 | 在详细组件内 |
| `→` 或 `l` | 向右滚动 | 在详细组件内 |

## 本地分支面板

| 键      | 操作           | 场合                           |
| :------ | :------------- | :----------------------------- |
| `< / >` | 切换组件面板   | 在本地分支、标签、远程和 Worktree 之间切换 |
| `n`     | 创建新分支     | 打开分支创建流程               |
| `enter` | 切换到选定分支 | 如需要则打开切换分支弹出窗口   |
| `d`     | 删除选定分支   | 删除分支（需要确认）           |
| `r`     | 变基到另一个分支     | 仅在选定分支为已检出分支时有效 |
| `m`     | 合并分支到当前分支   | 打开多分支合并选择器           |
| `F`     | 筛选分支列表         | 输入以筛选，`enter` 应用，`esc` 清除 |

## 修改文件面板

| 键      | 操作               | 何时                                   |
| :------ | :----------------- | :------------------------------------- |
| `space` | 切换 暂存/取消暂存 | 在暂存和未暂存之间切换文件             |
| `e`     | 编辑文件           | 在外部编辑器/终端中打开文件            |
| `enter` | 查看文件差异       | 在详细面板中显示差异                   |
| `r`     | 解决冲突           | 打开冲突解决选项（仅在冲突文件时显示） |
| `d`     | 丢弃更改           | 打开丢弃确认流程                       |
| `s`     | 暂存选中的文件     | 打开暂存消息输入弹窗                   |
| `S`     | 暂存所有文件       | 打开暂存消息输入弹窗                   |
| `c`     | 提交               | 打开提交弹窗                           |
| `A`     | 修正提交           | 打开修正提交弹窗                       |
| `F`     | 筛选文件列表       | 输入以筛选，`enter` 应用，`esc` 清除   |

## 提交日志面板

| 键       | 操作             | 备注                                    |
| :------- | :--------------- | :-------------------------------------- |
| `< / >`  | 切换到 RefLog    | 切换到 RefLog 面板                      |
| `r`      | 重置选定的提交   | 打开重置选项（Soft/Mixed/Hard）         |
| `R`      | 重置最新提交     | 打开 HEAD 的重置选项（Soft/Mixed/Hard） |
| `ctrl+r` | 还原提交         | 打开提交还原选项                        |
| `t`      | 创建标签         | 打开创建标签菜单                        |
| `ctrl+p` | Cherry Pick 模式 | 进入 Cherry Pick 选择模式               |
| `i`      | 交互式变基       | 打开交互式变基操作选择器                |
| `enter`  | 查看提交详情     | 在详细面板中显示提交差异                |
| `F`      | 筛选提交日志     | 输入以筛选，`enter` 应用，`esc` 清除    |

## RefLog 面板

| 键       | 操作                         | 备注                               |
| :------- | :--------------------------- | :--------------------------------- |
| `< / >`  | 切换到提交日志               | 切换回提交日志面板                 |
| `↑ or k` | 移动到上一条目               |                                    |
| `↓ or j` | 移动到下一条目               |                                    |
| `enter`  | 查看条目详情                 | 在详细面板中显示条目信息           |
| `n`      | 从提交哈希创建新分支         | 打开分支名称输入弹出窗口           |
| `r`      | 重置到选定提交               | 打开重置选项（Soft/Mixed/Hard）    |
| `ctrl+p` | 在当前分支上 Cherry Pick     | 打开 Cherry Pick 确认弹出窗口      |
| `F`      | 筛选 RefLog 列表             | 输入以筛选，`enter` 应用，`esc` 清除 |

## Stash 面板

| 键          | 操作       | 场合                      |
| :---------- | :--------- | :------------------------ |
| `space`     | 应用 Stash | 应用 Stash 但保留在列表中 |
| `backspace` | 弹出 Stash | 应用 Stash 并从列表中删除 |
| `d`         | 删除 Stash | 永久删除 Stash            |
| `F`         | 筛选 Stash 列表 | 输入以筛选，`enter` 应用，`esc` 清除 |

## 日志面板

| 键  | 操作     | 备注                              |
| :-- | :------- | :-------------------------------- |
| `e` | 导出日志 | 将日志内容导出到 Downloads 文件夹 |

## 标签面板

| 键       | 操作             | 场合                           |
| :------- | :--------------- | :----------------------------- |
| `< / >`  | 切换组件面板     | 在本地分支、标签、远程和 Worktree 之间切换 |
| `d`      | 删除标签         | 打开删除标签菜单               |
| `ctrl+p` | 推送标签         | 打开推送标签菜单               |
| `f`      | 获取标签         | 打开获取标签菜单               |
| `F`      | 筛选标签列表     | 输入以筛选，`enter` 应用，`esc` 清除 |
| `?`      | 快捷键和操作说明 | 打开专用帮助弹出窗口           |

## 远程操作

| 键  | 操作 | 场合                                |
| :-- | :--- | :---------------------------------- |
| `p` | 推送 | 打开推送流程（远程选择 → 推送选项） |
| `P` | 拉取 | 打开拉取流程（拉取类型选择）        |

## 远程面板

| 键      | 操作             | 场合                           |
| :------ | :--------------- | :----------------------------- |
| `< / >` | 切换组件面板     | 在本地分支、标签、远程和 Worktree 之间切换 |
| `n`     | 新建远程         | 打开添加远程流程               |
| `d`     | 移除远程         | 移除已配置的远程               |
| `e`     | 编辑远程         | 打开编辑远程流程               |
| `enter` | 设为跟踪上游     | 将当前远程设置为上游           |
| `F`     | 筛选远程列表     | 输入以筛选，`enter` 应用，`esc` 清除 |
| `?`     | 快捷键和操作说明 | 打开专用帮助弹出窗口           |

## Worktree 面板

| 键          | 操作                   | 场合                                       |
| :---------- | :--------------------- | :----------------------------------------- |
| `< / >`     | 切换组件面板           | 在本地分支、标签、远程和 Worktree 之间切换 |
| `enter`     | 切换 Worktree          | 切换到选定的 Worktree                      |
| `n`         | 新建 Worktree          | 打开添加 Worktree 流程（名称 + 可选分支）  |
| `backspace` | 删除 Worktree          | 打开删除确认弹出窗口                       |
| `o`         | 锁定 / 解锁 Worktree   | 切换锁定状态（主 Worktree 不可用）         |
| `ctrl+p`    | 修剪 Worktree          | 移除陈旧/丢失的 Worktree 引用              |
| `F`         | 筛选 Worktree 列表     | 输入以筛选，`enter` 应用，`esc` 清除       |
| `?`         | 快捷键和操作说明       | 打开专用帮助弹出窗口                       |

## 弹出窗口键位绑定

### 文本输入弹出窗口

_适用于：提交、修改提交、添加远程、创建分支、Stash 消息、添加 Worktree、Worktree 锁定原因_

| 键          | 操作       | 备注                                               |
| :---------- | :--------- | :------------------------------------------------- |
| `ctrl+e`    | 提交       | 提交表单（用于多行文本区域）                       |
| `ctrl+p`    | 粘贴       | 从剪贴板粘贴文本                                   |
| `ctrl+y`    | 复制       | 将选中的文本复制到剪贴板                           |
| `enter`     | 提交       | 仅适用于单行输入（分支名称、Stash 消息、远程字段） |
| `esc`       | 取消       | 不保存关闭弹出窗口                                 |
| `tab`       | 下一个字段 | 移动到下一个输入字段（如有多个字段）               |
| `shift+tab` | 上一个字段 | 移动到上一个输入字段（如有多个字段）               |

---

### 选择弹出窗口

_适用于：分支类型、切换类型、推送类型、拉取类型、远程选择、丢弃类型、解决冲突类型_

| 键         | 操作     | 备注                   |
| :--------- | :------- | :--------------------- |
| `↑` 或 `k` | 向上导航 | 选择上一个选项         |
| `↓` 或 `j` | 向下导航 | 选择下一个选项         |
| `enter`    | 确认选择 | 使用选定选项继续       |
| `esc`      | 取消     | 不执行操作关闭弹出窗口 |

---

### 输出/结果弹出窗口

_适用于：推送输出、拉取输出、切换分支输出_

| 键    | 操作         | 备注             |
| :---- | :----------- | :--------------- |
| `esc` | 关闭弹出窗口 | 关闭输出弹出窗口 |

---

### 键位绑定帮助弹出窗口

| 键         | 操作     | 备注             |
| :--------- | :------- | :--------------- |
| `↑` 或 `k` | 向上滚动 | 滚动键位绑定列表 |
| `↓` 或 `j` | 向下滚动 | 滚动键位绑定列表 |
| `esc`      | 关闭帮助 | 关闭帮助弹出窗口 |

## 详细视图（右侧面板）

| 键         | 操作           | 备注                               |
| :--------- | :------------- | :--------------------------------- |
| `esc`      | 返回列表       | 退出详细视图，将焦点返回到列表面板 |
| `↑` 或 `k` | 向上滚动       | 向上滚动差异内容                   |
| `↓` 或 `j` | 向下滚动       | 向下滚动差异内容                   |
| `←` 或 `h` | 向左滚动       | 向左滚动差异内容                   |
| `→` 或 `l` | 向右滚动       | 向右滚动差异内容                   |
| `[`        | 上一个拆分面板 | 切换到暂存/未暂存视图              |
| `]`        | 下一个拆分面板 | 切换到暂存/未暂存视图              |
| `L`        | 切换行暂存模式   | 进入/退出单行暂存模式 (查看文件时)            |
| `space`    | 暂存/取消暂存行 | 暂存/取消暂存选中行（行编辑模式时）           |
| `d`        | 丢弃行          | 丢弃选中行（行编辑模式时）                    |

## 总结

- **`* [!!]`** 键位绑定在任何地方都有效，包括在弹出窗口内
- **`*`** 键位绑定全局有效，但在弹出窗口打开时无效
- **特定上下文的键位绑定**仅在其各自的面板中有效
- **弹出窗口键位绑定**取决于弹出窗口类型（文本输入 vs 选择 vs 输出）
- **`esc`**是关闭弹出窗口或退出详细视图的通用方法
- **`F`** 筛选当前聚焦的列表面板，每个列表保留各自的筛选内容
- **鼠标**点击可聚焦面板并选中列表项；滚轮可滚动详细面板和弹出窗口
